SimGrid (3.12) NOT RELEASED; urgency=low

 (to complete)

 -- $date Da SimGrid team <simgrid-devel@lists.gforge.inria.fr>

SimGrid (3.11) stable; urgency=low

 The Class Release.

 Tools:
 * Normalizing pointers addresses tool for better diff between logs

 Examples:
 * Add cloud examples using new VMs
   - examples/msg/cloud/two_tasks_vm.tesh
   - examples/msg/cloud/simple_vm.tesh
   - examples/java/cloud/cloud.tesh
   - examples/java/cloud/migration/migration.tesh
 * Add java surf examples:
   - examples/java/surfPlugin/surf_plugin.tesh
   - examples/java/reservationSurfPlugin/reservation_surf_plugin.tes
   - examples/java/surfCpuModel/surf_cpu_model.tesh
 * Add SMPI+MSG example:
   - examples/smpi/smpi_msg_masterslave/

 TeshSuite:
 * Add tests:
   - msg process test
   - msg task destroy cancel test
   - msg_host on/off test
 * Move all tests in testsuite to teshsuite (adding tesh files)
 * Restructure teshsuites
   - one folder for each kind of test
 * Restructure AddTests.cmake
   - unify tests names
   - structure the order of tests (with sections)

 MSG:
 * Add virtual machine
   - creation of a VM on a PM
   - migration of a VM from a PM to another PM
 * New functions
   - MSG_process_join(msg_process_t process, double timeout)
   - msg_bar_t MSG_barrier_init(unsigned int count)
   - int MSG_barrier_wait(msg_bar_t barrier)
   - void MSG_barrier_destroy(msg_bar_t barrier)
   - msg_as_t MSG_environment_as_get_by_name(const char * name)
 * New option "msg/debug_multiple_use" to help debugging when a task is used
   several times
 * MSG IO
   - Improvements and finalization of MSG_storage, MSG_file APIs and their
     documentation
   - Increase code coverage in test suites
   - Bug fixes

 SIMIX:
 * Protect context stacks against stack overflow. The number of protected memory
   pages allocated on the top of each stack (1 by default) can be configured
   with the new command line option --cfg=contexts/guard_size:<value>.